--- a/3B-NEW/admin-brands-form-edit.html
+++ b/3B-NEW/admin-brands-form-edit.html
@@ -427,6 +427,12 @@
 											</select>
 										</div>
 									</div>
+									<div class="form-group">
+										<div class="chk">
+											<input type="checkbox" name="chk1" id="chk1" class="chk-custom">
+											<label for="chk1" class="chk-custom-label">Thương hiệu uy tín</label>
+										</div>
+									</div>
 									
 									<button type="button" class="btn btn-danger">Lưu</button>
 									<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-deleteConfirm">Xóa</button>
