--- a/3B-NEW/admin-categories-form-retail-size-add.html
+++ b/3B-NEW/admin-categories-form-retail-size-add.html
@@ -248,7 +248,7 @@
 					<!-- /END STORE -->
 
 					<!-- BEGIN CATEGORIES -->
-					<li class="header">
+					<li class="header active">
 						<img class="icons-svg" src="assets/images/svg/docs.svg">
 						<a href="admin-categories.html"><span>Quản lý danh mục</span></a>
 					</li>
@@ -292,7 +292,7 @@
 					<!-- /END MENU ORDER -->
 
 					<!-- BEGIN MENU BRAND -->
-					<li class="header active">
+					<li class="header">
 						<img class="icons-svg" src="assets/images/svg/tag.svg"> 
 						<a href="admin-brands.html"><span>Quản lý brand</span></a>
 					</li>
@@ -372,81 +372,226 @@
 			<section class="content-header">
 				<ol class="breadcrumb">
 					<li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-					<li class="active">Quản lý thương hiệu</li>
+					<li class="active">Thêm/Sửa danh mục</li>
 				</ol>
 			</section>
 			<!-- /END CONTENT HEADER -->
 
-			<!-- BEGIN CONTENT -->
 			<section class="content">
-				<!-- BEGIN BOX -->
 				<div class="box">
 					<!-- BEGIN FORM -->
 					<form action="#" role="form">
+
 						<div class="box-header">
 							<h3 class="box-title">
-								Thêm thương hiệu
-								<small>Quản lý thương hiệu</small>
+								Quản lý danh mục
+								<small>Thêm/Sửa danh mục</small>
 							</h3>
 						</div>
+
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body">
 							<div class="row">
+								<!-- BEGIN LEFT CONTENT -->
 								<div class="col-md-6">
-									<div class="form-group">
-										<label>Ảnh đại diện</label>
-										<div class="input-group">
-											<button class="btn btn-app">
-												<i class="fa fa-image"></i> Tải ảnh
-											</button>
+									<div class="row">
+										<div class="col-md-12">
+											<label>Ảnh đại diện</label>
+											<div class="input-group">
+												<a class="btn btn-app">
+													<i class="fa fa-image"></i> Tải ảnh
+												</a>
+											</div>
 										</div>
 									</div>
 									<div class="form-group">
-										<label>Tên thương hiệu</label>
-										<div class="input-group">
-											<span class="input-group-addon"><i class="fa fa-tag"></i></span>
-											<input type="text" class="form-control" placeholder="Tên thương hiệu">
-										</div>
-									</div>
-									<div class="form-group">
-										<label>Chọn danh mục</label>
+										<label>Tên danh mục</label>
 										<div class="input-group">
 											<span class="input-group-addon"><i class="fa fa-folder-o"></i></span>
-											<select class="form-control multislb" multiple="multiple">
-												<option>Thời trang Nam/Nữ</option>
-												<option>Thiết bị điện tử</option>
-												<option>Máy tính & Laptop</option>
-												<option>Máy ảnh / Máy quay</option>
-												<option>Đồng hồ</option>
-												<option>Giày dép Nam/Nữ</option>
-												<option>Thiết bị gia dụng</option>
-											</select>
-
+											<input type="text" class="form-control" placeholder="Tên danh mục">
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<div class="chk">
+												<input type="checkbox" name="chk1" id="chk1" class="chk-custom" >
+												<label for="chk1" class="chk-custom-label">Hiện thị trên top page</label>
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<div class="input-group">
+													<span class="input-group-addon"><i class="fa fa-folder-o"></i></span>
+													<input type="text" class="form-control" placeholder="Số thứ tự hiện thị">
+												</div>
+											</div>
 										</div>
 									</div>
 									<div class="form-group">
+										<label>Size</label>
 										<div class="chk">
-											<input type="checkbox" name="chk1" id="chk1" class="chk-custom">
-											<label for="chk1" class="chk-custom-label">Thương hiệu uy tín</label>
+											<input type="checkbox" name="chk2" id="chk2" class="chk-custom" >
+											<label for="chk2" class="chk-custom-label">Được phép sale hàng lẻ size</label>
+										</div>
+										<div class="input-group">
+											<span class="input-group-addon"><i class="fa fa-list-alt"></i></span>
+											<select class="form-control slb">
+												<option value="1">Size quần kiểu Âu (S, M, XL)</option>
+												<option value="2">Size quần kiểu Á (34, 35, 36, 37, 38)</option>
+											</select>
 										</div>
 									</div>
-									
-									<button type="button" class="btn btn-danger">Lưu</button>
-									<a href="admin-brands.html" class="btn btn-default">Quay lại</a>
+									<!-- BEGIN BLOCK CURRENT ATTR -->
+									<div class="form-group">
+										<label>Thuộc tính sản phẩm</label>
+
+										<div class="box small">
+											<div class="box-body">
+												<!-- BUTTON DEL CURRENT ATTR -->
+												<a href="#" class="del-current-attr"><span class="badge bg-red"><i class="fa fa-trash-o"></i></span></a>
+												<!-- /END BUTTON DEL CURRENT ATTR -->
+
+												<div class="row">
+													<!-- BEGIN ADD NAME-TYPE -->
+													<div class="col-md-6">
+														<label>Tên</label>
+														<div class="input-group">
+															<span class="input-group-addon"><i class="fa fa-folder-o"></i></span>
+															<input type="text" class="form-control" placeholder="Phong cách">
+														</div>
+													</div>
+													<div class="col-md-6">
+														<label>Hiển thị dưới dạng</label>
+														<div class="input-group">
+															<span class="input-group-addon"><i class="fa fa-list-alt"></i></span>
+															<select class="form-control slb">
+																<option value="1">Select 1</option>
+																<option value="2">Select 2</option>
+																<option value="3" selected>Select 3</option>
+																<option value="4">Select 4</option>
+															</select>
+														</div>
+													</div>
+													<!-- /END ADD NAME-TYPE -->
+
+													<!-- BEGIN ADD VALUE -->
+													<div class="col-xs-12">
+														<label>Giá trị</label>
+														<div class="row">
+															<div class="col-md-4">
+																<div class="input-group">
+																	<input type="text" class="form-control">
+																	<span class="input-group-btn">
+																		<button class="btn"><i class="fa fa-trash-o"></i></button>
+																	</span>
+																</div>
+															</div>
+															<div class="col-md-4">
+																<div class="input-group">
+																	<input type="text" class="form-control">
+																	<span class="input-group-btn">
+																		<button class="btn"><i class="fa fa-trash-o"></i></button>
+																	</span>
+																</div>
+															</div>
+															<div class="col-md-4">
+																<div class="input-group">
+																	<input type="text" class="form-control">
+																	<span class="input-group-btn">
+																		<button class="btn"><i class="fa fa-trash-o"></i></button>
+																	</span>
+																</div>
+															</div>
+															<div class="col-md-4">
+																<button type="button" class="btn btn-flat btn-success">Thêm giá trị</button>
+															</div>
+														</div>
+													</div>
+													<!-- /END ADD VALUE -->
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- /END BLOCK CURRENT ATTR -->
+
+									<!-- BUTTON ADD MORE ATTR -->
+									<button type="button" class="btn btn-flat btn-success margin-b">Thêm thuộc tính sản phẩm</button>
+									<!-- /END BUTTON ADD MORE ATTR -->
+
+									<!-- BEGIN BLOCK CURRENT ATTR -->
+									<div class="form-group">
+										<label>Keyword liên quan</label>
+
+										<div class="row">
+											<!-- BEGIN ADD VALUE -->
+											<div class="col-xs-12">
+												<div class="row">
+													<div class="col-md-4">
+														<div class="input-group">
+															<input type="text" class="form-control">
+															<span class="input-group-btn">
+																<button class="btn"><i class="fa fa-trash-o"></i></button>
+															</span>
+														</div>
+													</div>
+													<div class="col-md-4">
+														<button type="button" class="btn btn-flat btn-success">Thêm</button>
+													</div>
+												</div>
+											</div>
+											<!-- /END ADD VALUE -->
+										</div>
+									</div>
+									<!-- /END BLOCK CURRENT ATTR -->
+
+								</div>
+								<!-- /END LEFT CONTENT -->
+							</div>
+						</div>
+						<!-- /END BOX BODY -->
+
+						<div class="box-footer">
+							<div class="row">
+								<div class="col-md-12">
+									<button type="button" class="btn btn-flat btn-danger">Lưu</button>
 								</div>
 							</div>
 						</div>
+
 					</form>
 					<!-- /END FORM -->
-				</div>
-				<!-- /END BOX -->
+				</div>				
 			</section>
 			<!-- /END CONTENT -->
 		</div>
 		<!-- /END CONTENT WRAPPER -->
-
 	</div>
 	<!-- /END WRAPPER -->
+
+	<!-- BEGIN MODAL CONFIRM DELETE -->
+	<div class="modal fade" id="modal-deleteCat" data-backdrop="static">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Xóa danh mục</h4>
+				</div>
+
+				<!-- BEGIN FORM -->
+				<div class="modal-body">
+					Bạn muốn xóa danh mục này?
+				</div>
+				<!-- /END FORM -->
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-flat btn-default pull-left btn-close" data-dismiss="modal">Đóng</button>
+					<button type="button" class="btn btn-flat btn-danger">Xóa</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /END MODAL CONFIRM DELETE -->
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
@@ -455,11 +600,5 @@
 	<script src="assets/plugins/datepicker/bootstrap-datepicker.min.js"></script>
 	<script src="assets/plugins/select2/select2.full.min.js"></script>
 	<script src="assets/js/base.min.js"></script>
-	<script type="text/javascript">
-		$(function () {
-			//Initialize Select2 Elements
-			$('.multislb').select2();
-		});
-	</script>
 </body>
 </html>
