--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -356,6 +356,27 @@
 				</div>
 			</div>
 		</div>
+
+		<hr style="border:2px solid #aaa">
+
+		<div id="pharse7" class="row">
+			<div class="col-md-6">
+				<div class="admin">
+					<h5>ADMIN</h5>
+					<ul>
+						<li><a href="admin-range-super-cheap.html">Admin Super Cheap</a></li>
+						<li><a href="admin-categories-form-retail-size-add.html">Admin Category Retail Size Add</a></li>
+						<li><a href="admin-banner.html">Admin Manage Banner</a></li>
+					</ul>
+				</div>
+				<div class="admin">
+					<h5>SELLER</h5>
+					<ul>
+						<li><a href="seller-regist-product-retail-size.html">Seller regist product retail size</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- /END WRAPPER -->
@@ -365,7 +386,8 @@
 		<li><a href="#pharse3">Pharse 3</a></li>
 		<li><a href="#pharse4">Pharse 4</a></li>
 		<li><a href="#pharse5">Pharse 5</a></li>
-		<li><a href="#pharse5">Pharse 6</a></li>
+		<li><a href="#pharse6">Pharse 6</a></li>
+		<li><a href="#pharse7">Pharse 7</a></li>
 	</ul>
 
 </body>
