--- a/3B-NEW/admin-range-super-cheap-edit.html
+++ b/3B-NEW/admin-range-super-cheap-edit.html
@@ -292,7 +292,7 @@
 					<!-- /END MENU ORDER -->
 
 					<!-- BEGIN MENU BRAND -->
-					<li class="header active">
+					<li class="header">
 						<img class="icons-svg" src="assets/images/svg/tag.svg"> 
 						<a href="admin-brands.html"><span>Quản lý brand</span></a>
 					</li>
@@ -336,7 +336,7 @@
 							<li>
 								<a href="#"><span>Chiết khấu</span></a>
 							</li>
-							<li>
+							<li class="active">
 								<a href="admin-warranty.html"><span>Quản lý bảo hành</span></a>
 							</li>
 							<li>
@@ -372,7 +372,7 @@
 			<section class="content-header">
 				<ol class="breadcrumb">
 					<li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-					<li class="active">Quản lý thương hiệu</li>
+					<li class="active">Quản lý khoảng giá rẻ vô địch</li>
 				</ol>
 			</section>
 			<!-- /END CONTENT HEADER -->
@@ -385,8 +385,8 @@
 					<form action="#" role="form">
 						<div class="box-header">
 							<h3 class="box-title">
-								Thêm thương hiệu
-								<small>Quản lý thương hiệu</small>
+								Sửa khoảng giá
+								<small>Quản lý khoảng giá rẻ vô địch</small>
 							</h3>
 						</div>
 						<!-- BEGIN BOX BODY -->
@@ -394,45 +394,39 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<label>Ảnh đại diện</label>
-										<div class="input-group">
-											<button class="btn btn-app">
-												<i class="fa fa-image"></i> Tải ảnh
-											</button>
-										</div>
-									</div>
-									<div class="form-group">
-										<label>Tên thương hiệu</label>
+										<label>Tên hiển thị</label>
 										<div class="input-group">
 											<span class="input-group-addon"><i class="fa fa-tag"></i></span>
-											<input type="text" class="form-control" placeholder="Tên thương hiệu">
+											<input type="text" class="form-control" placeholder="Tên hiển thị">
 										</div>
 									</div>
-									<div class="form-group">
-										<label>Chọn danh mục</label>
-										<div class="input-group">
-											<span class="input-group-addon"><i class="fa fa-folder-o"></i></span>
-											<select class="form-control multislb" multiple="multiple">
-												<option>Thời trang Nam/Nữ</option>
-												<option>Thiết bị điện tử</option>
-												<option>Máy tính & Laptop</option>
-												<option>Máy ảnh / Máy quay</option>
-												<option>Đồng hồ</option>
-												<option>Giày dép Nam/Nữ</option>
-												<option>Thiết bị gia dụng</option>
-											</select>
-
+									<div class="row">
+										<div class="col-md-12"><label>Khoảng giá</label></div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<span class="btn">Từ</span>
+													</span>
+													<input type="text" class="form-control">
+												</div>
+											</div>
 										</div>
-									</div>
-									<div class="form-group">
-										<div class="chk">
-											<input type="checkbox" name="chk1" id="chk1" class="chk-custom">
-											<label for="chk1" class="chk-custom-label">Thương hiệu uy tín</label>
+										<div class="col-md-6">
+											<div class="form-group">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<span class="btn">đến</span>
+													</span>
+													<input type="text" class="form-control">
+												</div>
+											</div>
 										</div>
 									</div>
 									
 									<button type="button" class="btn btn-danger">Lưu</button>
-									<a href="admin-brands.html" class="btn btn-default">Quay lại</a>
+									<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-deleteConfirm">Xóa</button>
+									<a href="admin-range-super-cheap.html" class="btn btn-default">Quay lại</a>
 								</div>
 							</div>
 						</div>
@@ -448,6 +442,31 @@
 	</div>
 	<!-- /END WRAPPER -->
 
+	<!-- BEGIN MODAL CONFIRM DELETE -->
+	<div class="modal fade" id="modal-deleteConfirm" data-backdrop="static">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Xóa khoảng giá này</h4>
+				</div>
+
+				<!-- BEGIN FORM -->
+				<div class="modal-body">
+					Bạn muốn xóa khoảng giá này?
+				</div>
+				<!-- /END FORM -->
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-flat btn-default pull-left btn-close" data-dismiss="modal">Đóng</button>
+					<button type="button" class="btn btn-flat btn-danger">Xóa</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /END MODAL CONFIRM DELETE -->
+
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/fastclick.js"></script>
@@ -455,11 +474,5 @@
 	<script src="assets/plugins/datepicker/bootstrap-datepicker.min.js"></script>
 	<script src="assets/plugins/select2/select2.full.min.js"></script>
 	<script src="assets/js/base.min.js"></script>
-	<script type="text/javascript">
-		$(function () {
-			//Initialize Select2 Elements
-			$('.multislb').select2();
-		});
-	</script>
 </body>
 </html>
