3B - update seller advertising

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -373,6 +373,8 @@
 					<h5>SELLER</h5>
 					<ul>
 						<li><a href="seller-regist-product-retail-size.html">Seller regist product retail size</a></li>
+						<li><a href="seller-advertising.html">Seller Advertising</a></li>
+						<li><a href="seller-advertising-shop.html">Seller Advertising Shop</a></li>
 					</ul>
 				</div>
 			</div>
