--- a/3B-NEW/seller-regist-product-retail-size-add.html
+++ b/3B-NEW/seller-regist-product-retail-size-add.html
@@ -361,7 +361,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">Sale giày bay của Hermes!</label>
+												<label class="custom-wrap-line two-line margin-b">Sale giày bay của Hermes!</label>
 											</div>
 										</div>
 
@@ -382,7 +382,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">[Freeship] Cái gì cũng được</label>
+												<label class="custom-wrap-line two-line margin-b">[Freeship] Cái gì cũng được</label>
 											</div>
 										</div>
 
@@ -403,7 +403,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">Thanh lý xác cây</label>
+												<label class="custom-wrap-line two-line margin-b">Thanh lý xác cây</label>
 											</div>
 										</div>
 
@@ -424,7 +424,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">Lorem isum dolor set amit de portibo le mes franksoa do lor a mit</label>
+												<label class="custom-wrap-line two-line margin-b">Lorem isum dolor set amit de portibo le mes franksoa do lor a mit</label>
 											</div>
 										</div>
 
@@ -445,7 +445,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">Thanh lý bộ...</label>
+												<label class="custom-wrap-line two-line margin-b">Thanh lý bộ...</label>
 											</div>
 										</div>
 
@@ -466,7 +466,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">Thanh lý bộ...</label>
+												<label class="custom-wrap-line two-line margin-b">Thanh lý bộ...</label>
 											</div>
 										</div>
 
@@ -487,7 +487,7 @@
 												</div>
 											</div>
 											<div class="col-xs-12">
-												<label class="custom-wrap-2line margin-b">Thanh lý bộ...</label>
+												<label class="custom-wrap-line two-line margin-b">Thanh lý bộ...</label>
 											</div>
 										</div>
 									</div>
