3B - update seller-advertising

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -375,6 +375,7 @@
 						<li><a href="seller-regist-product-retail-size.html">Seller regist product retail size</a></li>
 						<li><a href="seller-advertising.html">Seller Advertising</a></li>
 						<li><a href="seller-advertising-shop.html">Seller Advertising Shop</a></li>
+						<li><a href="seller-advertising-view-setting.html">Seller Advertising View Setting</a></li>
 					</ul>
 				</div>
 			</div>
