--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -87,6 +87,13 @@
 						<li><a href="chatbox-no-message.html">Chatbox - No message</a></li>
 					</ul>
 				</div>
+
+				<div class="col-md-6">
+					<h5>Phase 7</h5>
+					<ul>
+						<li><a href="outlet.html">Outlet</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
