--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -92,6 +92,9 @@
 					<h5>Phase 7</h5>
 					<ul>
 						<li><a href="outlet.html">Outlet</a></li>
+						<li><a href="all-store.html">All Store</a></li>
+						<li><a href="brand-item.html">Brand item</a></li>
+						<li><a href="from-1k.html">From 1k</a></li>
 					</ul>
 				</div>
 			</div>
